# hello-rocket

./: Cargo.toml  Containerfile  LICENSE  README.md
src/: main.rs  singleton.rs
