[package]
name = "hello-rocket"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/mpatron/hello-rocket"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["secrets", "tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.110"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
lazy_static = "1.4"
assert-json-diff = "2.0.2"
